[package]
name = "cryptape-sm"
version = "0.3.0"
authors = [
    "Tang Zongxun <tangzongxun@hotmail.com>",
    "Niu Junxiang <494521900@qq.com>",
    "Cryptape Technology <contact@cryptape.com>"
]

description = "A Rust Library of China's Standards of Encryption Algorithms (SM2/3/4)"
keywords = ["cipher", "cryptography"]
license = "Apache-2.0"

[dependencies]
rand = {version = "0.7", default-features = false }
byteorder = { version = "1.3.2", default-features = false }
num-traits = { version = "0.2.8", default-features = false }
num-integer = { version = "0.1.41", default-features = false }
yasna = { version = "0.1.3",  optional = true }
num-bigint = { version = "0.2", default-features = false }
lazy_static = { version = "1.4", default-features = false, optional = true }

[features]
default = ["std"]
std = [
    "rand/std",
    "byteorder/std",
    "num-traits/std",
    "num-integer/std",
    "num-bigint/std",
    "lazy_static"
]
der = [
    "yasna"
    ]


